Fixed wrap on screen size change and improve buttons consistency size

--- a/Styles.css
+++ b/Styles.css
@@ -95,6 +95,10 @@ body {
     color: white;
 }
 
+#choose-company {
+    height: 40px;
+}
+
 
 #prev,
 #prev-com {
@@ -622,6 +626,7 @@ footer p {
 
     #main-container h2 {
         text-align: center;
+        width: 100%;
     }
 
 
@@ -846,7 +851,7 @@ footer p {
 
 @media screen and (max-width: 500px) {
     #hero-img {
-        max-width: 300px;
+        max-width: 90%;
     }
 }
 
@@ -859,11 +864,6 @@ footer p {
 
     #hero-text h1 {
         font-size: 2.1em;
-    }
-
-    #hero-img {
-        max-width: 90%;
-        max-height: 200px;
     }
 
     #main-container {
